# Visiting-Nurses-Assignment-and-Routing-for-Hybrid-Telehealth-Service-Networks

./: CMakeLists.txt  FindGUROBI.cmake  InitHeuristic.cpp  MACRO.hpp  NurseVrp.cpp  NurseVrp.hpp  Pivot.cpp  README.md  RL.py  Solver.hpp  benchmark.ipynb  benchmark.py  localSearch.cpp  main.cpp
RL/: readme.txt
nvrp/: Label.cpp  MaxClique.cpp  Solver.cpp  main.cpp  output.txt  readme.txt
